# person-statistics

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docker-files/: boot-web.sh
person_statistics/: models.py  processing.py  web.py
person_statistics/templates/: how_to_use.html  plain_text_response.txt
tests/: test_models.py  test_person_statistics.py  test_processing.py
