[tool.poetry]
name = "person-statistics"
version = "0.1.0"
description = ""
authors = ["Micah Nordland <micah@rehack.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

